tests/cases/scc/error/0015-macro.c
//!necc-dbg @ -as
#define X(A, A) 0

